--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: 似曾相识燕归来的博客
+subtitle: 个人博客、笔记、心得……
 ---
